<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutActivity"
        android:background="@android:color/black">

    <TextView
            android:text="@string/about_name"
            android:textSize="24sp"
            android:textColor="@color/yellowColor"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="141dp"
            android:layout_height="37dp"
            android:id="@+id/nameTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/developerNameTextView"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/dateOfBirthTextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/developer_name"
            android:textSize="24sp"
            android:textColor="@color/yellowColor"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="141dp"
            android:layout_height="37dp"
            android:id="@+id/developerNameTextView" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/nameTextView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/developerBirthDateTextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/about_birthdate"
            android:textSize="24sp"
            android:textColor="@color/yellowColor"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_height="37dp"
            android:layout_width="141dp"
            android:id="@+id/dateOfBirthTextView"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/developerBirthDateTextView" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/developer_birth_date"
            android:textSize="24sp"
            android:textColor="@color/yellowColor"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="141dp"
            android:layout_height="37dp"
            android:id="@+id/developerBirthDateTextView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/dateOfBirthTextView" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>