<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CharacterActivity">

    <TextView
            android:text="@string/about_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="141dp"
            android:layout_height="37dp"
            android:id="@+id/nameTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/characterName"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/load"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="141dp"
            android:layout_height="37dp"
            android:id="@+id/characterName" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/nameTextView"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:text="@string/gender"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="141dp"
            android:layout_height="37dp"
            android:id="@+id/genderTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/characterGender"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/nameTextView"/>

    <TextView
            android:text="@string/load"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="141dp"
            android:layout_height="37dp"
            android:id="@+id/characterGender" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/genderTextView"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/characterName"/>

    <TextView
            android:text="@string/home_world"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="141dp"
            android:layout_height="37dp"
            android:id="@+id/homeWorldTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/characterHomeWorld"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/genderTextView"/>

    <TextView
            android:text="@string/load"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="141dp"
            android:layout_height="37dp"
            android:id="@+id/characterHomeWorld" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/homeWorldTextView"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/characterGender"/>

    <TextView
            android:text="@string/skin_color"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="141dp"
            android:layout_height="37dp"
            android:id="@+id/skinColorTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/characterSkinColor"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/homeWorldTextView"/>

    <TextView
            android:text="@string/load"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="141dp"
            android:layout_height="37dp"
            android:id="@+id/characterSkinColor" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/skinColorTextView"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/characterHomeWorld"/>

    <Button
            android:text="@string/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/search_btn" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/vehiclesRecyclerView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/skinColorTextView"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="395dp"
            android:layout_height="220dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:id="@+id/vehiclesRecyclerView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/search_btn"/>
</android.support.constraint.ConstraintLayout>